SERVER-26335 CollectionBulkLoader should not build secondary indexes if buildIndexes=false in replica set configuration